2017-07-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* pretest 6.4.90
	* configure.ac: Update version.  Add dist-xz to options.

2017-07-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph: Run gnulib-tool --add-import.
	* (top-level): Run gnulib-tool --add-import.

2017-07-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/Makefile.am (wwwdoc-build): Remove commands that could
	build the "info" manual.

2017-07-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Update with various news items.

2017-07-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_find_subfile): When looking for an 
	already-loaded file, check that the names match either exactly, 
	or as an initial substring followed by a period.  Previously,
	any loaded file which had an initial substring that was the name 
	of the sought file would be accepted, which would be incorrect
	for a case like "libc.info-11" matching when it was "libc.info-1"
	that was wanted.  Vitezslav Crhonek reported that this could 
	lead to failure when following cross-references.

	* info/t/subfile-initial-match.sh: New test.

2017-07-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_get_node_with_defaults): Only use the
	directory from the current node's fullpath if this function was 
	passed a filename as an argument.

2017-07-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c
	(get_filename_and_nodename, info_get_node_with_defaults):
	Merge get_filename_and_nodename into caller.

2017-07-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (build_tags_and_nodes): Call 'skip_node_separator'
	in order not to start reading the tag table in the middle of an
	"Indirect:" string.

2017-07-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_load_file): If calling 
	'build_tags_and_nodes' didn't set the 'tags' array for the file 
	buffer, fail to load the file.
	* info/info.c (add_initial_nodes): Check if info_load_file failed.
