@@ -1,3 +1,8 @@
+2017-07-16  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* gnulib/m4/intlmacos.m4: Add this file, as gettextize doesn't 
+	copy it.
+
 2017-07-10  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* pretest 6.4.90
